--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,3 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: mobile_bungalow/qt_docker_action@valpha
+  test_actual:
+    runs-on: ubuntu-latest
+    steps:
+    - use: mobile_bungalow/qt_docker_action@valpha
+        with:
+          command: "echo malto benne! && qmake"
+
