--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,5 +6,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: mobile-bungalow/qt_docker_action@alpha
+    - uses: mobile-bungalow/qt_docker_action@alpha2
   
