--- a/action.yml
+++ b/action.yml
@@ -8,5 +8,5 @@ inputs:
     default: echo "No Commands Specified!" && exit 1
 runs:
   using: 'docker'
-  image: 'docker://rabbits/qt:5.13-desktop'
+  image: 'docker://rabits/qt:5.13-desktop'
   entrypoint: "echo ghouls" #${{ inputs.command }}
