--- a/action.yml
+++ b/action.yml
@@ -9,4 +9,5 @@ inputs:
 runs:
   using: 'docker'
   image: 'docker://rabits/qt:5.13-desktop'
-  entrypoint: "echo ghouls" #${{ inputs.command }}
+  args: 
+    - ${{ inputs.command }}
