--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ inputs:
   command:
     description: 'this will be substituted for the entry point field'
     required: true
-    default: echo "No Commands Specified!" && exit 1
+    default: "echo No Commands Specified!" && exit 1
 runs:
   using: 'docker'
   image: 'docker://rabits/qt:5.13-desktop'
