--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: mobile-bungalow/qt_docker_action@alpha7
-  
+      with:
+        command: echo ok
