--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v1
     - uses: mobile-bungalow/qt_docker_action@alpha7
       with:
-        command: echo ok
+        project_file: ./tests/broken.pro
+        exectuable: ./broken
