--- a/action.yml
+++ b/action.yml
@@ -2,12 +2,13 @@
 name: 'qt_docker_action'
 description: 'runs arbitrary commands inside a docker container that has qmake et al'
 inputs: 
-  command:
-    description: 'this will be substituted for the entry point field'
+  project_file:
     required: true
-    default: 'echo No Commands Specified! && exit 1'
+  executable:
+    required: true
 runs:
   using: 'docker'
-  image: 'docker://rabits/qt:5.13-desktop'
+  image: 'Dockerfile'
   args: 
-    - ${{ inputs.command }}
+    - ${{ inputs.project_file }}
+      ${{ inputes.executable }}
